--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <script src="./index.js"></script>
-    <script src="./hw.js"></script>
+    <script src="./hw_1.js"></script>
+    <script src="./hw_2.js"></script>
 </body>
 </html>
