--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script src="./index.js"></script>
     <script src="./hw_1.js"></script>
     <script src="./hw_2.js"></script>
+    <script src="./hw_3.js"></script>
 </body>
 </html>
