--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="./hw_1.js"></script>
     <script src="./hw_2.js"></script>
     <script src="./hw_3.js"></script>
+    <script src="./hw_4.js"></script>
 </body>
 </html>
