--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     <!-- <link rel ="icon" href="favicon.ico" type="image/x-icon"> -->
     <link rel="icon" href="https://rullan.in.ua/favicon.ico" type="image/x-icon">
     <title>Document</title>
-
 </head>
 <body>
+
+<div class="counter">
+    <button class="js-decrement">уменьшить</button>
+    <p class="js-value"> 0 </p>
+    <button class="js-increment">увеличить</button>
+</div>
+
 
     <script src="./index.js"></script>
     <script src="./hw_1.js"></script>
     <script src="./hw_2.js"></script>
     <script src="./hw_3.js"></script>
     <script src="./hw_4.js"></script>
+    <script src="./hw_5.js"></script>
+    <script src="./счетчик.js"></script>
 </body>
 </html>
