added finished up to 16 tasks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button class="js-increment">увеличить</button>
 </div>
 
-
+    <script src="./class.js"></script>
     <script src="./index.js"></script>
     <script src="./hw_1.js"></script>
     <script src="./hw_2.js"></script>
