--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <script src="./hw_4.js"></script>
     <script src="./hw_5.js"></script>
     <script src="./счетчик.js"></script>
+    <script src="./hw_6.js"></script>
 </body>
 </html>
